<resources>
    <string name="app_name">Mamae Vovo</string>
    <string name="confirm">Confirmar</string>
    <string name="insert">Inserir</string>
    <string name="update">Alterar</string>
    <string name="delete">Deletar</string>

    <string name="principal_cadastre_salesorder">Pedidos</string>
    <string name="principal_cadastre_product">Produtos</string>
    <string name="principal_cadastre_subitem">SubItens</string>
    <string name="principal_cadastre_reports">Relatórios</string>

    <string name="product_title">Cadastro de Produtos</string>
    <string name="product_description">Descrição</string>
    <string name="product_unit_un">Unidade</string>
    <string name="product_unit_kg">K/g</string>
    <string name="product_usa_subitens">Usa sub itens</string>
    <string name="product_price">Preço</string>
    <string name="product_obs">Observação</string>
    <string name="product_insert_ok">Produto inserido!</string>
    <string name="product_insert_fail">Produto não inserido!</string>
    <string name="product_update_ok">Produto alterado!</string>
    <string name="product_update_fail">Produto não alterado!</string>
    <string name="product_delete_ok">Produto deletado!</string>
    <string name="product_delete_fail">Produto não deletado!</string>

    <string name="salesorder_list_title">Pedidos</string>

    <string name="salesorder_title">Pedido</string>

    <string name="subitem_list_title">SubItens</string>

    <string name="subitem_title">Cadastro de SubItens</string>
    <string name="subitem_description">Descrição</string>
    <string name="subitem_active">Ativo</string>
    <string name="subitem_insert_ok">SubItem inserido!</string>
    <string name="subitem_insert_fail">SubItem não inserido!</string>
    <string name="subitem_update_ok">SubItem alterado!</string>
    <string name="subitem_update_fail">SubItem não alterado!</string>
    <string name="subitem_delete_ok">SubItem deletado!</string>
    <string name="subitem_delete_fail">SubItem não deletado!</string>

    <string name="salesorderitem_title">Item</string>
    <string name="title_activity_teste">teste</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
</resources>
