<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText android:id="@+id/ed_description"
            style="@style/DefaultTextEdit"
            android:inputType="text"
            android:hint="@string/product_description" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rd_un"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:text="@string/product_unit_un"/>
            <RadioButton android:id="@+id/rd_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:text="@string/product_unit_kg"/>
        </RadioGroup>

        <EditText android:id="@+id/ed_price"
            style="@style/DefaultTextEdit"
            android:inputType="number"
            android:hint="@string/product_price" />

        <EditText android:id="@+id/ed_obs"
            style="@style/DefaultTextEdit"
            android:inputType="textMultiLine"
            android:layout_height="match_parent"
            android:hint="@string/product_obs" />
    </LinearLayout>

    <Button android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20"
        android:text="@string/confirm"
        android:layout_weight="0"/>

</android.support.v7.widget.LinearLayoutCompat>