<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".activities.PrincipalActivitty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_principal_salesorder"
            style="@style/DefaultButton"
            android:text="@string/principal_cadastre_salesorder"/>

        <Button
            android:id="@+id/btn_principal_product"
            style="@style/DefaultButton"
            android:text="@string/principal_cadastre_product"/>

        <Button
            android:id="@+id/btn_principal_subitem"
            style="@style/DefaultButton"
            android:text="@string/principal_cadastre_subitem"/>

        <Button
            android:id="@+id/btn_principal_reports"
            style="@style/DefaultButton"
            android:text="@string/principal_cadastre_reports"/>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>